Bug 1167544 - OpenH264 should not send STAP-A aggregation packets in mode 0; r=jesup

MozReview-Commit-ID: IY2mu9dVKHK

--HG--
extra : rebase_source : 77e455651ebf39cf56ca9892be59bd50622b8cc3