media/webrtc/signaling/src/media-conduit/WebrtcGmpVideoCodec.cpp
@@ -186,7 +186,11 @@ WebrtcGmpVideoEncoder::InitEncode(const webrtc::VideoCodec* aCodecSettings,
   codecParams.mMaxBitrate = aCodecSettings->maxBitrate;
   codecParams.mMaxFramerate = aCodecSettings->maxFramerate;
   mMaxPayloadSize = aMaxPayloadSize;
-  if (aCodecSettings->codecSpecific.H264.packetizationMode == 1) {
+
+  memset(&mCodecSpecificInfo, 0, sizeof(webrtc::CodecSpecificInfo));
+  mCodecSpecificInfo.codecType = webrtc::kVideoCodecH264;
+  mCodecSpecificInfo.codecSpecific.H264.packetizationMode = aCodecSettings->codecSpecific.H264.packetizationMode;
+  if (mCodecSpecificInfo.codecSpecific.H264.packetizationMode == 1) {
     mMaxPayloadSize = 0; // No limit.
   }
 
@@ -642,7 +646,12 @@ WebrtcGmpVideoEncoder::Encoded(GMPVideoEncodedFrame* aEncodedFrame,
       unit._timeStamp = timestamp;
       unit._completeFrame = true;
 
-      mCallback->Encoded(unit, nullptr, &fragmentation);
+      // TODO: Currently the OpenH264 codec does not preserve any codec
+      //       specific info passed into it and just returns default values.
+      //       Even if we were to add packetization mode to the codec specific info
+      //       the value passed in would not be returned to us. If this changes in
+      //       the future, it would be nice to get rid of mCodecSpecificInfo.
+      mCallback->Encoded(unit, &mCodecSpecificInfo, &fragmentation);
     }
   }
 }
