media/webrtc/trunk/webrtc/modules/video_coding/codecs/interface/video_codec_interface.h
@@ -81,6 +81,7 @@ struct CodecSpecificInfoGeneric {
 struct CodecSpecificInfoH264 {
   bool    single_nalu;
   uint8_t simulcastIdx;
+  uint8_t packetizationMode;
 };
 
 union CodecSpecificInfoUnion {
