media/webrtc/trunk/webrtc/modules/video_coding/main/source/generic_encoder.cc
@@ -77,6 +77,8 @@ void CopyCodecSpecific(const CodecSpecificInfo* info, RTPVideoHeader* rtp) {
     }
     case kVideoCodecH264:
       rtp->codec = kRtpVideoH264;
+      rtp->codecHeader.H264.packetization_mode = info->codecSpecific.H264.packetizationMode;
+      rtp->codecHeader.H264.single_nalu = info->codecSpecific.H264.single_nalu;
       rtp->simulcastIdx = info->codecSpecific.H264.simulcastIdx;
       return;
     case kVideoCodecGeneric:
